# labo3-2025v

./: .gitignore
labo3/: .env.gcp  project_config.yml  pyproject.toml
labo3/notebooks/: clase.ipynb  labo3 - regression.ipynb  labo3 - regression_new.ipynb  run.ipynb
labo3/scripts/: abort.sh  deploy.sh  deploy_from_daemon.sh  run.py  run_dataset.py  run_model.py  startup.sh  stop_monitor.sh
labo3/src/multinational/: config.py  dataset_generator.py  gcs_manager.py  query.py  utils.py
labo3/src/multinational/models/: lightgbm_regressor.py
